# BotDmarket

./: .black.toml  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  BOT_MANAGEMENT.md  Dockerfile  GITHUB_ACTIONS_GUIDELINES.md  GITHUB_UPLOAD_GUIDE.md  Makefile  README.md  STRUCTURE.md  api_guidelines.py  check_dmarket_api.py  check_import.py  create_env_file.py  dmarket_aggregated_prices_openapi.json  dmarket_api.py  dmarket_fixed_block.py  docker-compose.yml  error_analytics.json  fix_indentation_v2.py  main.py  mypy.ini  mypy_daemon.py  pyproject.toml  python_telegram_bot_fix.py  requirements.txt  run.py  run_bot.py  run_with_fixes.bat  run_with_test_balance.bat  setup.py  test_balance.py  test_bot.py  test_main_bot.py  validate_api_keys.py  vscode_mypy_page.html  НАДО ВНЕСТИ.txt  ТЕСТЫ.txt  (+1 more)
.github/: copilot-instructions.md  example-workflow.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: README.md  ci-go.yml  ci-js.yml  ci-php.yml  ci-python-project.yml  ci-python.yml  ci.yml  code-quality.yml  pre-commit.yml  python-tests.yml  quick-tests.yml  security-scan.yml
config/: .pylintrc  mypy.ini  pyrightconfig.json
data/notifications/: smart_alerts.json
docs/: REFACTORING.md  RUFF_USAGE.md  additional_improvements_report.md  arbitrage_improvements.md  balance_fix_report.md  balance_troubleshooting.md  fixed_balance_guide.md  improvements_report.md  improvements_summary.md  project_structure.md  test_optimization_report.md  vscode_setup.md
docs/source/: conf.py  index.rst
python/scripts/: test_balance.py
python/src/telegram_bot/: auto_arbitrage_scanner.py
scripts/: apply_type_annotations.py  check_code.py  check_game_filters.py  cleanup_tests.py  demo_bot_with_error_handling.py  demo_error_handling.py  demo_filters.py  demo_game_filters.py  demo_localization.py  demo_rate_limiter.py  dmarket_api_example.py  format_code.py  migrate_users.py  run_bot.py  run_module_tests.py  simple_balance_check.py  test_balance.py  test_balance_with_patch.py  test_direct_balance.py  test_dmarket_api_simple.py  test_fixed_balance.py  test_game_filters.py  test_game_filters2.py  test_game_filters3.py  test_simple.py  verify_balance_fix.py
scripts/deployment/: start_bot_service.py  stop_bot_service.py
scripts/test_tools/: analyze_tests.py  cleanup_duplicate_tests.py  find_duplicates.py
src/: __init__.py  __main__.py  demo_auto_arbitrage.py  demo_improved_arbitrage.py
src/dmarket/: __init__.py  arbitrage.py  arbitrage_sales_analysis.py  arbitrage_scanner.py  auto_arbitrage.py  balance_patch.py  dmarket_api.py  dmarket_api.py.bak  dmarket_api_backup.py  dmarket_api_balance.py  dmarket_api_balance_fix.py  dmarket_api_fix.py  dmarket_api_fixed.py  dmarket_api_patch.py  dmarket_api_patches.py  fix_balance.py  game_filters.py  intramarket_arbitrage.py  market_analysis.py  realtime_price_watcher.py  sales_history.py
src/dmarket/api/: client.py
src/dmarket/models/: market_models.py
src/dmarket/tests/: __init__.py  conftest.py  test_dmarket_api.py  test_game_filters.py
src/telegram_bot/: README.md  __init__.py  arbitrage_scanner.py  auto_arbitrage.py  auto_arbitrage_scanner.py  bot.py  bot_v2.py  constants.py  enhanced_auto_arbitrage.py  game_filter_handlers.py  initialization.py  keyboards.py  localization.py  market_alerts.py  notifier.py  pagination.py  price_alerts_handler.py  profiles.py  sales_analysis_callbacks.py  sales_analysis_handlers.py  settings_handlers.py  smart_notifier.py  user_profiles.json  user_profiles.py
src/telegram_bot/handlers/: arbitrage_callback_impl.py  callbacks.py  commands.py  dmarket_handlers.py  dmarket_status.py  enhanced_arbitrage_handler.py  error_handlers.py  intramarket_arbitrage_handler.py  market_alerts_handler.py  market_analysis_handler.py
src/telegram_bot/tests/: __init__.py  conftest.py  test_arbitrage_handlers.py  test_keyboards.py
src/utils/: api_error_handling.py  dmarket_api_utils.py  error_handling.py  exception_handling.py  logging_utils.py  market_analyzer.py  market_visualizer.py  performance.py  price_analyzer.py  rate_limiter.py  websocket_client.py
tests/: README.md  categories_conftest.py  conftest.py  mock_auto_arbitrage_scanner.py  mock_dmarket_api.py  mock_intramarket_arbitrage.py  test_api_unified.py  test_arbitrage.py  test_arbitrage_boost.py  test_arbitrage_callback.py  test_arbitrage_callback_impl.py  test_arbitrage_callback_impl_new.py  test_arbitrage_sales_analysis.py  test_arbitrage_sales_opportunities.py  test_arbitrage_scanner.py  test_arbitrage_scanner_simple.py  test_arbitrage_scanner_updated.py  test_arbitrage_trader.py  test_arbitrage_unified.py  test_auto_arbitrage.py  test_auto_arbitrage_scanner.py  test_auto_arbitrage_simple.py  test_auto_arbitrage_updated.py  test_balance_patch.py  test_balance_utility.py  test_bot_unified.py  test_bot_v2.py  test_bot_v2_api_error_handling.py  test_bot_v2_arbitrage.py  test_bot_v2_auto_arbitrage.py  test_bot_v2_auto_arbitrage_fixed.py  test_bot_v2_commands.py  test_bot_v2_commands_sync.py  test_bot_v2_dmarket.py  test_bot_v2_dmarket_fixed.py  test_bot_v2_formatting.py  test_bot_v2_functions.py  test_bot_v2_pagination.py  test_bot_v2_pagination_fixed.py  test_bot_v2_updated.py  (+25 more)
tests/dmarket/: conftest.py  test_api_unified.py  test_arbitrage.py  test_dmarket_api.py  test_dmarket_api_simplified.py  test_game_filters.py  test_game_filters_adapted.py  test_intramarket_arbitrage.py  test_intramarket_arbitrage_v2.py  test_realtime_price_watcher.py  test_sales_history.py  test_sales_history_adapted.py  test_sales_history_improved.py
tests/fixtures/: common_fixtures.py
tests/telegram_bot/: conftest.py  test_arbitrage_scanner_simplified.py  test_auto_arbitrage_scanner.py  test_bot_consolidated.py  test_bot_unified.py  test_bot_v2.py  test_game_filter_handlers.py  test_intramarket_handler.py  test_keyboard.py  test_sales_analysis_callbacks.py  test_settings_handlers.py  test_smart_notifier.py
tests/utils/: test_api_error_handling.py  test_market_analyzer.py  test_market_visualizer.py  test_websocket_client.py
(+10 files in other folders)
