[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmarket-tools"
version = "0.1.0"
description = "Tools for working with DMarket API"
readme = "README.md"
authors = [
    {name = "DM Trading Tools Team", email = "example@example.com"},
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/yourusername/dm-trading-tools"
"Bug Tracker" = "https://github.com/yourusername/dm-trading-tools/issues"

[tool.ruff]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
precision = 2
fail_under = 70.0

[tool.pylint.messages_control]
disable = [
    "import-error",
    "no-member",
    "unused-argument",
    "missing-module-docstring",
    "missing-function-docstring",
    "wrong-import-order",
    "invalid-name"
]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
follow_imports = "silent"

[tool.poetry.group.dev.dependencies]
python-telegram-bot = "^22.0"

